Improve code quality using latest Java version.